Added new container

--- a/react_webviews/src/withdraw/Style.scss
+++ b/react_webviews/src/withdraw/Style.scss
@@ -4,6 +4,7 @@
   overflow-y: auto;
 }
 #withdraw-balance {
+  padding-top: 20px;
   .report-header {
     background-color: var(--primary);
     color: #ffffff;
