--- a/react_webviews/src/withdraw/components/style.scss
+++ b/react_webviews/src/withdraw/components/style.scss
@@ -1,6 +1,7 @@
 //////////// Withdraw Reasons ////////////////
 .withdraw-reasons,
 .withdraw-remark {
+  padding-top: 20px;
   .withdraw-reason-title,
   .withdraw-remark-title {
     padding: 20px;
