--- a/react_webviews/src/withdraw/Style.scss
+++ b/react_webviews/src/withdraw/Style.scss
@@ -191,7 +191,7 @@
 
 #withdraw-insta-summary {
   .title {
-    margin: 40px 0 10px 0;
+    margin: 0 0 10px 0;
     font-size: 20px;
     color: #0a1c32;
     font-weight: 600;
