added know more modal

--- a/react_webviews/src/withdraw/Style.scss
+++ b/react_webviews/src/withdraw/Style.scss
@@ -296,3 +296,42 @@
     margin: 10px 0 0 0;
   }
 }
+
+#withdraw-know-more {
+  .header {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .header .title {
+    margin: 40px 0;
+    width: 55%;
+    color: #160d2e;
+    font-size: 20px;
+    font-weight: 600;
+  }
+
+  .description {
+    color: #767e86;
+    font-size: 14px;
+    margin: 10px 0;
+  }
+  .MuiButton-containedSecondary {
+    background-color: var(--secondary);
+    padding: 16px;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  #withdraw-know-more {
+    .MuiDialog-paper {
+      margin-left: 0 !important;
+      margin-right: 0 !important;
+    }
+
+    .MuiDialog-paperWidthSm {
+      width: 100%;
+      align-self: flex-end;
+    }
+  }
+}
