--- a/react_webviews/src/withdraw/components/style.scss
+++ b/react_webviews/src/withdraw/components/style.scss
@@ -145,7 +145,6 @@
 }
 
 #withdraw-verify {
-
   .withdraw-verify {
     margin: 0 auto;
     text-align: center;
@@ -179,7 +178,7 @@
     margin: 30px 0 10px -10px !important;
   }
 }
-    
+
 .withdraw-insta {
   margin-bottom: 50px;
   .withdraw-zero-invest-icon {
@@ -189,8 +188,8 @@
   .withdraw-insta-head {
     text-align: center;
   }
-  .withdraw-insta-icon{
-    img{
+  .withdraw-insta-icon {
+    img {
       width: 100px;
     }
   }
@@ -208,12 +207,12 @@
   }
 }
 
-.withdraw-insta-failed{
-  .help-contact-email{
+.withdraw-insta-failed {
+  .help-contact-email {
     display: flex;
   }
 }
-.withdraw-insta-failed.pr-error-container .error-text{
+.withdraw-insta-failed.pr-error-container .error-text {
   text-align: left !important;
 }
 
@@ -223,7 +222,7 @@
   padding: 15px 15px 20px 15px;
   border: 1px solid #fff5f6;
   border-radius: 4px;
-  background: #FFF5F6;
+  background: #fff5f6;
 
   .withdraw-insta-exceed-icon {
     margin-right: 10px;
@@ -240,5 +239,66 @@
       font-size: 14px;
       text-align: start;
     }
+  }
+}
+
+#withdraw-otp-switch {
+  .otp-text {
+    text-align: center;
+    font-size: 16px;
+  }
+
+  .page {
+    padding-bottom: 50px;
+  }
+
+  .otp {
+    padding: auto 30px;
+  }
+
+  .input {
+    display: block;
+    margin: 0 auto;
+    width: 150px;
+    font-size: 22px;
+  }
+  .otp-input {
+    margin-bottom: 50px;
+    margin-top: 50px;
+  }
+
+  .resend-otp {
+    font-size: 14px;
+    cursor: pointer;
+    color: purple;
+    text-align: center;
+    margin-left: auto;
+    display: table;
+    margin-right: auto;
+    margin-top: 32px;
+  }
+
+  .page-footer {
+    margin: 50px !important;
+    display: flex;
+    justify-content: center;
+  }
+
+  .page-footer .cta-button {
+    min-width: 180px;
+    width: auto;
+    margin: 0;
+    padding: 5px 15px;
+    text-transform: uppercase;
+    font-size: 14px;
+    border-radius: 5px;
+    letter-spacing: 1px;
+    background-color: var(--secondary);
+    color: white;
+  }
+
+  .MuiButton-root.MuiButton-disabled {
+    background-color: #bfc1c1 !important;
+    color: rgba(0, 0, 0, 0.38) !important;
   }
 }
