--- a/react_webviews/src/dashboard/invest/Style.scss
+++ b/react_webviews/src/dashboard/invest/Style.scss
@@ -433,7 +433,17 @@
   }
 }
 
-.header {
+.penny-verification-pending-dialog {
+  .dialog-content {
+    padding: 5px 15px 0 15px !important;
+
+    .text {
+      margin-top: 30px;
+    }
+  }
+}
+
+.invest-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
