added explore investments if no investments found

--- a/react_webviews/src/withdraw/Style.scss
+++ b/react_webviews/src/withdraw/Style.scss
@@ -3,6 +3,12 @@
   line-height: 1.5;
   overflow-y: auto;
 }
+
+.withdraw-no-investments-override {
+  background-color: #ededed;
+  line-height: 1.5;
+  overflow-y: auto;
+}
 #withdraw-balance {
   padding-top: 20px;
   .report-header {
