--- a/react_webviews/src/kyc/Style.scss
+++ b/react_webviews/src/kyc/Style.scss
@@ -341,6 +341,7 @@
 
 .kyc-journey .steps-container {
   margin-top: 40px;
+  margin-left: 10px;
 }
 
 .kyc-journey .steps-container .step {
@@ -2100,3 +2101,16 @@
     font-weight: bold;
   }
 }
+
+// kyc pan status ///
+
+.kyc-pan-status{
+  margin-top: 115px;
+  color: #767E86;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 21px;
+  letter-spacing: 0px;
+}
+
+// end of kyc pan status ///
