--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -95,6 +95,51 @@ body[data-device="web"] {
     .Loader {
       max-width: 100%;
     }
+    .nfo-checkout{
+      .checkout-invest-type{
+        background-color: white !important;
+
+        div#onetime {
+          box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
+        }
+      }
+    }
+
+    .diy-search{
+      background-color: white;
+      height: auto;
+      padding-bottom: 0px;
+
+      .search-content {
+        padding-bottom: 0px;
+      }
+
+      .search-loader {
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 50%;
+      }
+
+      .search-list{
+        height: 70vh;
+        box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.0483186);
+        border-radius: 6px;
+        padding: 10px;
+        margin-left: 2px;
+        .text{
+          padding: 12px;
+          font-size: 14px;
+          font-style: normal;
+          font-weight: 300;
+          line-height: 17px;
+          letter-spacing: 0px;
+          text-align: left;
+          color: #6D6E71;
+        }
+      }
+    }
+
     .Footer{
       position: fixed !important;
       width: 100% !important;
@@ -104,8 +149,14 @@ body[data-device="web"] {
       display: flex;
       justify-content: center;
 
-      & > div {
-        max-width: fit-content;
+      .FooterTwoButtonLayout,.FooterDefaultLayout{
+        button{
+          min-width: 310px !important;
+          width: max-content !important;
+        }
+        button.borderButton{
+          border: none !important;
+        }
       }
     }
   }
@@ -117,6 +168,7 @@ body[data-device="web"] {
     .fadein-animation{
       margin-top: 20px;
       flex: 1 1 55%;
+      padding-bottom: 100px;
     }
 
     .iframe-right-content{
