--- a/react_webviews/src/dashboard/invest/components/mini_components/style.scss
+++ b/react_webviews/src/dashboard/invest/components/mini_components/style.scss
@@ -57,7 +57,7 @@
 
 ////////Invested Amount /////////////////
 .invested-amount-common-container{
-    margin:-20px;
+    margin: 0 -20px -20px -20px;
 }
 .invested-amount-display{
     background-color: #ececec;
