--- a/react_webviews/src/dashboard/invest/Style.scss
+++ b/react_webviews/src/dashboard/invest/Style.scss
@@ -258,6 +258,10 @@
     }
   }
 
+  .skelton-loader {
+    height: 80px !important;
+  }
+
   .fund-card {
     display: -ms-flexbox;
     display: flex;
