--- a/react_webviews/src/dashboard/invest/components/RiskPages/RiskPages.scss
+++ b/react_webviews/src/dashboard/invest/components/RiskPages/RiskPages.scss
@@ -20,7 +20,7 @@
   }
 }
 .risk-customize-cta {
-  margin-top: 30px;
+  margin: 30px 0;
   font-weight: bold;
   font-size: 13px;
   line-height: 21px;
