--- a/react_webviews/src/dashboard/mini-components/style.scss
+++ b/react_webviews/src/dashboard/mini-components/style.scss
@@ -20,7 +20,7 @@
 // PeriodWiseReturns styling ---------
 
 .invested-amount-common-container{
-    margin:-20px;
+  margin: 0 -20px -20px -20px;
 }
 
 .invested-amount-display {
