Added logout and minor fixes in my account and notification

--- a/react_webviews/src/login_and_registration/Style.scss
+++ b/react_webviews/src/login_and_registration/Style.scss
@@ -376,6 +376,12 @@
   }
 }
 
+.logout {
+  padding: 50px 20px;
+  text-align: center;
+  color: #333333;
+}
+
 @media only screen and (max-width: 1200px) {
   .login {
     .login-details {
