--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1260,3 +1260,7 @@ label{
 .react-select__indicators{
 padding-right: 12px !important;
 }
+.imgc-box-landing{
+  width: 70px !important;
+  min-height: 60px !important;
+}
