Added partner spefic border radius

--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -426,7 +426,7 @@ button {
 }
 
 .FlexButtonGenericColor{
-  background-color: rgb(53, 203, 93);
+  // background-color: rgb(53, 203, 93);
   color: white;
   border-radius: 6px;
 }
