--- a/react_webviews/src/dashboard/Invest/Style.scss
+++ b/react_webviews/src/dashboard/Invest/Style.scss
@@ -459,7 +459,6 @@
     padding: 0 20px 0 20px;
     .marketing-banners-list {
       display: flex;
-      background-color: yellow;
       width: fit-content;
       margin-bottom: 20px;
     }
@@ -481,6 +480,17 @@
 
   .sdk-landing-cards {
     margin-top: 20px;
+  }
+  
+  .generic-page-subtitle{
+    margin-top: -20px;
+  }
+}
+
+.sdk-background{
+  background: #f3f4f6 !important;
+  .header-title-page{
+    background: #f3f4f6 !important;
   }
 }
 
