refactored folders, added campaign diaolg(styling is left)

--- a/react_webviews/src/dashboard/Invest/components/NFO/SipDates.scss
+++ b/react_webviews/src/dashboard/Invest/components/NFO/SipDates.scss
@@ -53,3 +53,17 @@
     }
   }
 }
+
+.content {
+  .content-selected {
+    font-weight: 600 !important;
+    font-size: 16px;
+  }
+
+  .appened-text {
+    color: #767e86;
+    font-size: 13px;
+    font-weight: 300;
+    margin: 1px 0 0 20px;
+  }
+}
