--- a/react_webviews/src/dashboard/Invest/mini-components/mini-components.scss
+++ b/react_webviews/src/dashboard/Invest/mini-components/mini-components.scss
@@ -290,3 +290,232 @@
   pointer-events: none;
 }
 ////////////End of Sdk Landing Card/////////////////
+
+
+////////////////////// common bottom sheet dialog Landing///////////////////////
+
+.verification-failed-dialog {
+  .verification-failed-dialog-content {
+    padding: 15px 15px 30px 15px !important;
+
+    .title {
+      margin: -15px -15px 0 0;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      column-gap: 10px;
+      color: #160d2e;
+      font-size: 20px;
+      font-weight: 600;
+
+      .text {
+        margin: 30px 0 10px 0;
+      }
+    }
+
+    .subtitle {
+      color: #767e86;
+      font-size: 14px;
+      margin: 20px 0;
+    }
+
+    .bottom-info {
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-align: center;
+      align-items: center;
+      -ms-flex-pack: justify;
+      justify-content: space-between;
+      background-color: white;
+
+      .bottom-info-box {
+        display: -ms-flexbox;
+        display: flex;
+        padding: 0 10px 0 10px;
+
+        img {
+          margin: 0 10px 0 0px;
+        }
+
+        .bottom-info-content {
+          color: #767e86;
+          font-size: 13px;
+          font-weight: 400;
+        }
+      }
+
+      .bottom-info-mid {
+        border-left: 1px solid #d3dbe4;
+        height: 12px;
+      }
+    }
+
+    .action {
+      display: flex;
+      width: 100%;
+      align-items: center;
+
+      .button {
+        width: 100%;
+        padding: 5px 15px;
+        font-size: 14px;
+        border-radius: 5px;
+        min-height: 47px;
+        font-weight: bold;
+        letter-spacing: 0.01em;
+      }
+
+      .bg-full {
+        color: white;
+        background-color: var(--secondary);
+      }
+
+      .no-bg {
+        background-color: white;
+        color: #878787;
+      }
+    }
+  }
+
+  .kyc-premium-content {
+    .title {
+      .text {
+        margin-bottom: 30px;
+      }
+    }
+
+    .subtitle {
+      margin: 30px 0 10px 0;
+    }
+
+    .action {
+      margin-top: 30px;
+    }
+  }
+}
+
+//////////////// End of common bottom sheet dialog Landing /////////
+
+
+///////////////Secure Invest ///////////////////////////////
+
+.secure-invest-bottom {
+  padding: 10px 0 10px 0;
+  text-align: center;
+  margin: 0 0 30px 0px;
+  border-radius: 6px;
+
+  .content {
+    font-size: 14px;
+    color: #767e86;
+    margin: 0 0 5px 0;
+    font-weight: 500;
+  }
+
+  img {
+    margin: 5px 0 0 0;
+  }
+}
+
+///////////////End of Secure Invest /////////////////////////
+
+
+////////////// Invest Referral Dialog ///////////////////////
+
+.invest-refferal-dialog {
+  color: #333333;
+  line-height: 1.5;
+
+  .invest-refferal-dialog-content {
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      column-gap: 10px;
+      color: #0a1d32;
+      font-size: 16px;
+      font-weight: 600;
+      padding-bottom: 10px;
+    }
+
+    .sub-text {
+      color: #767e86;
+      font-size: 14px;
+      margin: 0;
+    }
+
+    .input {
+      padding: 10px 0;
+
+      .text {
+        color: #878787;
+        font-weight: 600;
+        cursor: pointer;
+        position: relative;
+        font-size: 13px;
+
+        .verify {
+          color: var(--secondary);
+          font-size: 15px;
+        }
+      }
+
+      .referral-loader {
+        position: absolute;
+
+        .dot-spinner {
+          padding-right: 22px;
+        }
+      }
+    }
+
+    footer {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      padding-top: 20px;
+
+      button {
+        min-width: 140px;
+        color: white;
+        background-color: var(--secondary);
+        padding: 5px 15px;
+        border-radius: 5px;
+        min-height: 42px;
+        line-height: 36px;
+        font-weight: 700;
+        font-size: 14px;
+        letter-spacing: 0.01em;
+      }
+
+      .trasparent-button {
+        border: 1px solid var(--secondary);
+        color: var(--secondary);
+        background-color: white;
+      }
+
+      .disabled {
+        background-color: #bfc1c1 !important;
+        color: rgba(0, 0, 0, 0.38) !important;
+        border: 1px solid #bfc1c1 !important;
+      }
+    }
+  }
+}
+
+////////////// End of Invest Referral Dialog ///////////////////////
+
+@media only screen and (max-width: 700px) {
+  #invest-bottom-dialog, #sdk-campaign-dialog {
+    .MuiDialog-paper {
+      margin-left: 0 !important;
+      margin-right: 0 !important;
+    }
+
+    .MuiDialog-paperWidthSm {
+      width: 100%;
+      align-self: flex-end;
+    }
+  }
+}
