--- a/react_webviews/src/dashboard/Invest/components/Landing/Landing.scss
+++ b/react_webviews/src/dashboard/Invest/components/Landing/Landing.scss
@@ -30,18 +30,13 @@
 
   .invest-landing-button {
     font-weight: 800;
-    font-size: 11px;
-    color: white;
-    padding: 0px 10px 0 10px;
-    width: 140px;
+    font-size: 11px !important;
+    padding: 0px 10px;
+    width: 140px !important;
     margin: 6px 8px 6px 0;
-    background-color: var(--secondary);
     line-height: 36px;
     letter-spacing: 0.01em;
-  }
-
-  .invest-landing-button:hover {
-    background-color: var(--secondary);
+    height: 40px !important;
   }
 
   .invest-card {
@@ -169,9 +164,7 @@
     }
 
     .invest-landing-button {
-      color: var(--secondary);
-      border: 2px solid var(--secondary);
-      background-color: white;
+      border: 2px solid var(--secondary) !important;
     }
   }
 
