--- a/react_webviews/src/dashboard/Invest/commonStyles.scss
+++ b/react_webviews/src/dashboard/Invest/commonStyles.scss
@@ -58,19 +58,23 @@
 
     .button {
       width: 100%;
-      background-color: var(--secondary);
       color: white;
       margin: 0px;
       padding: 5px 15px;
-      font-size: 14px;
+      font-size: 14px !important;
       border-radius: 5px;
       line-height: 36px;
       font-weight: bold;
+      height: 45px !important;
     }
 
     .trasparent-button {
       color: rgb(33, 33, 33);
+      height: 42px !important;
+      font-size: 14px !important;
       font-weight: normal;
+      width: 100px !important;
+      float: right;
       background-color: rgb(250, 250, 250);
     }
   }
