Fixed graph handling and css in recommendations

--- a/react_webviews/src/dashboard/Recommendation/ReplaceFunds.scss
+++ b/react_webviews/src/dashboard/Recommendation/ReplaceFunds.scss
@@ -1,8 +1,8 @@
-.recommendations-common-container {
+.recommendations-common-container-replace {
   display: flex;
   flex-direction: column;
   position: relative;
-  padding: 20px 20px 30px;
+  padding: 20px 0 30px;
 }
 
 .alternate-funds-item {
