--- a/react_webviews/src/dashboard/Invest/components/InvestGoal/GoalType.scss
+++ b/react_webviews/src/dashboard/Invest/components/InvestGoal/GoalType.scss
@@ -1,24 +1,39 @@
-.invest-goal-type-container {
+.invest-goal-container {
+  .title {
+      font-weight: 600;
+      margin-bottom: 20px;
+      line-height: 1.5;
+  }
+}
+
+.invest-goal-list-type{
   display: flex;
   flex-direction: column;
-  & > div:first-child {
-    width: 100%;
-    text-align: center;
-    font-size: 16px;
+}
+
+.invest-goal-list-item{
+  display: flex;
+  padding:10px;
+  align-items: center;
+  position: relative;
+  box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
+  border-radius: 3px;
+  margin-bottom: 20px;
+  cursor: pointer;
+  text-align: left;
+  div:first-child{
+
+      flex:2;
+      img{
+          margin-right: 20px;
+          width: 50px;
+          height: 50px;
+          object-fit: contain;
+      }
   }
-  .invest-goal-type-input {
-    margin-top: 20px;
-    width: 100%;
-    input {
-      width: 100%;
-      padding: 10px;
-      border: none;
-      outline: none;
-      text-align: center;
-      font-size: 30px;
-      line-height: 1;
-      height: auto;
-      font-weight: 400;
-    }
+
+  div:last-child{
+      flex:8;
+      font-size: 18px;
   }
 }
