fix for the footer button in WithdrawRemark page

--- a/react_webviews/src/withdraw/components/WithdrawReason/WithdrawReason.scss
+++ b/react_webviews/src/withdraw/components/WithdrawReason/WithdrawReason.scss
@@ -1,7 +1,6 @@
 .withdraw-reasons{
   padding-top: 20px;
-  .withdraw-reason-title,
-  .withdraw-remark-title {
+  .withdraw-reason-title{
     padding: 20px;
     font-size: 17px;
     color: black;
