--- a/react_webviews/src/dashboard/Invest/components/Explore/FundType.scss
+++ b/react_webviews/src/dashboard/Invest/components/Explore/FundType.scss
@@ -64,6 +64,13 @@
     align-items: center;
   }
 
+  .cart-actions .invest-explore-trending-button {
+    height: 36px;
+    min-height: 36px;
+    width: 90px !important;
+    font-size: 14px !important;
+  }
+
   .stats .desc {
     margin-left: 5px;
     font-size: 14px;
