Recommendations page style changes

--- a/react_webviews/src/dashboard/Recommendation/RecommendationTopCard.scss
+++ b/react_webviews/src/dashboard/Recommendation/RecommendationTopCard.scss
@@ -1,7 +1,7 @@
 
-.recommendation-top-section {
+.recommendation-top-card {
   padding: 0 20px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
   
   .top-section-card {
     display: flex;
