--- a/react_webviews/src/help_support_v2/Style.scss
+++ b/react_webviews/src/help_support_v2/Style.scss
@@ -384,7 +384,7 @@
   .ticket-id {
     font-size: 13px;
     font-weight: 600;
-    color: #4a4a4a;
+    color: var(--primary);
     cursor: pointer;
     margin: -20px 0 20px;
   }
