--- a/react_webviews/src/dashboard/DIY/mini-components/mini-components.scss
+++ b/react_webviews/src/dashboard/DIY/mini-components/mini-components.scss
@@ -237,7 +237,7 @@
     footer {
       margin: 0 -20px -20px -20px;
 
-      .button {
+      .filter-button {
         border-radius: 0;
         padding: 14px 10px;
         height: 45px;
