--- a/react_webviews/src/dashboard/Invest/commonStyles.scss
+++ b/react_webviews/src/dashboard/Invest/commonStyles.scss
@@ -56,7 +56,7 @@
     padding: 0 15px;
     margin: 8px 0 30px 0;
 
-    .button {
+    .invest-dialog-button {
       width: 100%;
       color: white;
       margin: 0px;
