--- a/react_webviews/src/dashboard/Invest/components/NFO/Funds.scss
+++ b/react_webviews/src/dashboard/Invest/components/NFO/Funds.scss
@@ -57,7 +57,7 @@
         .invest {
           width: fit-content;
 
-          .button {
+          .nfo-funds-button {
             margin: 6px 8px;
             width: 90px !important;
             min-width: 90px;
