--- a/react_webviews/src/dashboard/Recommendation/Recommendation.scss
+++ b/react_webviews/src/dashboard/Recommendation/Recommendation.scss
@@ -2,6 +2,12 @@
   margin: 0 -20px;
 }
 
+.recommendation-page:nth-child(1) {
+  .recommendations-section {
+    padding-top: 0;
+  }
+}
+
 .recommendations-section {
   display: flex;
   flex-direction: column;
