--- a/react_webviews/src/dashboard/Invest/commonStyles.scss
+++ b/react_webviews/src/dashboard/Invest/commonStyles.scss
@@ -68,7 +68,7 @@
       height: 45px !important;
     }
 
-    .trasparent-button {
+    .invest-dialog-transparent-button {
       color: rgb(33, 33, 33);
       height: 42px !important;
       font-size: 14px !important;
