--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -426,9 +426,8 @@ button {
 }
 
 .FlexButtonGenericColor{
-  // background-color: rgb(53, 203, 93);
+  background-color: var(--secondary);
   color: white;
-  border-radius: 6px;
 }
 
 .FooterTwoButtonLayout button.borderButton {
