--- a/react_webviews/src/reports/components/Summary/commonStyles.scss
+++ b/react_webviews/src/reports/components/Summary/commonStyles.scss
@@ -63,6 +63,11 @@
         margin-right: 10px;
       }
 
+      .reports-finity-icon {
+        width: 35px;
+        margin-left: 5px;
+      }
+
       .text {
         font-size: 14px;
         padding: 7px;
